feature: add stats service and client